# latent-translation

./: .pre-commit-config.yaml  README.md  env.yaml  media.dvc  mkdocs.yml  pyproject.toml  setup.cfg
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/nn/data/: default.yaml
conf/nn/data/dataset/vision/: mnist.yaml
conf/nn/module/: default.yaml
conf/nn/module/model/: cnn.yaml
data/: .gitignore  assets.dvc  multimodal_stitching.tsv.dvc
data/stitching/: .gitignore  fashion_mnist.dvc  mnist.dvc
docs/: index.html  project.json
docs/webpack/: base.css  base.js  edit_project.js  scene_selection.js
src/latent_translation/: run.py
src/latent_translation/manim/: teaser_image.py  utils.py
src/latent_translation/manim/slides/: 0_teaser.py  1_stitching.py  2_method.py  algorithm.py  conclusions.py  crossmodal.py  method.py  stitching.py  teaser.py  thanks.py  title.py  translation.py
src/latent_translation/pl_modules/: pl_module.py
src/latent_translation/scripts/: build_presentation.sh  export_presentation.sh
src/latent_translation/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
